session 15 - Sign In -  Schema Action Form

--- a/assets/styles/globals.css
+++ b/assets/styles/globals.css
@@ -115,3 +115,14 @@ html.dark .upload-field .text-white {
 .upload-field .text-white {
     color: #000 !important;
 }
+
+
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+    }
+  body {
+    @apply bg-background text-foreground;
+    }
+}
